# virtualdatalab

./: .gitattributes  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
docs/notebooks/: benchmark_example.ipynb  flatautoencoder_cdnow.ipynb  identity_synthesizer_dummy.ipynb
useful_notebooks/: benchmark_example.ipynb  flatautoencoder_cdnow.ipynb  google_colab_setup.ipynb  identity_synthesizer_dummy.ipynb  train.csv
useful_notebooks/.ipynb_checkpoints/: benchmark_example-checkpoint.ipynb  flatautoencoder_cdnow-checkpoint.ipynb  google_colab_setup-checkpoint.ipynb  identity_synthesizer_dummy-checkpoint.ipynb
virtualdatalab/: _version.py  benchmark.py  environment.yml  logging.py  metrics.py  requirements.txt  setup.py  target_data_generate.py  target_data_manipulation.py  text_metrics.py
virtualdatalab/cython/: cython_metric.c  cython_metric.pyx
virtualdatalab/datasets/data/: cdnow_len5.csv
virtualdatalab/synthesizers/: base.py  data_processor.py  flatautoencoder.py  identity.py  shuffle.py
virtualdatalab/virtualdatalab/: benchmark.py  metrics.py  target_data_manipulation.py
virtualdatalab/virtualdatalab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
virtualdatalab/virtualdatalab/datasets/: loader.py
virtualdatalab/virtualdatalab/datasets/data/: berka_len10.csv  mlb_len8.csv
virtualdatalab/virtualdatalab/synthesizers/: base.py  data_processor.py  flatautoencoder.py  flatautoencoder_original.py  identity.py  shuffle.py  utils.py
virtualdatalab/virtualdatalab/utils/: exceptions.py
(+1 files in other folders)
