[metadata]
name = virtualdatalab
description = Benchmark tool for synthetic data generators
long_description = file: README.md
license_files = file: LICENSE.txt
url = https://mostly.ai

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
tests_require = pytest

[build_ext]
inplace=1

[versioneer]
VCS = git
style = pep440
versionfile_source = virtualdatalab/_version.py
versionfile_build = virtualdatalab/_version.py
tag_prefix =
parentdir_prefix = virtualdatalab-